# RFModelCompression

./: .gitignore  README.md  pyproject.toml  walkthrough.md
outputs/: train_log.csv  train_summary.json
outputs/baseline/: baseline_evaluation.md  summary.json
outputs/baseline/seed_42/: model.pt  per_class_acc.json  train_log.csv
outputs/baseline/seed_43/: model.pt  per_class_acc.json  train_log.csv
outputs/baseline/seed_44/: model.pt  per_class_acc.json  train_log.csv
rfbc/: __init__.py  config.py
rfbc/data/: augment.py  bev.py  clutter.py  combined.py  dataset.py  loader.py  splits.py  transforms.py  two_head.py  windowing.py
rfbc/models/: baseline_cnn.py  stub_cnn.py  two_head_cnn.py
scripts/: build_split.py  compress_sweep.py  inspect_pkl.py  smoke_test.py  train.py  train_baseline.py  train_cv.py  visualise_bev.py  visualise_bev2.py  visualise_raw.py
splits/: splits.json
