[project]
name = "rf-behavior-compression"
version = "0.1.0"
description = "Class-wise impact of model compression in RF-based human activity recognition (RF-Behavior dataset)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "torch>=2.2",
    "tqdm>=4.66",
    "tensorboard>=2.15",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "pytest",
]

[tool.uv]
# Pin index for CPU/CUDA torch wheels in environments where the default index
# does not provide them. Override with --index-url at install time if needed.

[tool.setuptools.packages.find]
where = ["."]
include = ["rfbc*"]
