[project]
name = "rf-behavior-compression"
version = "0.1.0"
description = "Class-wise impact of model compression in RF-based human activity recognition (RF-Behavior dataset)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "torch>=2.2",
    "tqdm>=4.66",
    "tensorboard>=2.15",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "pytest",
]

[tool.uv]
# Tell uv to fetch torch from the PyTorch cu124 index instead of PyPI.
# cu124 wheels work on any server whose NVIDIA driver supports CUDA ≤ 12.5
# (driver internal version ≤ 12050). Run `uv sync` after pulling this change.
[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rfbc*", "scripts*"]
